cfn-template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: |
  CloudFormation Template for Roman Numerals Converter Application.
  This template creates a Python Flask Web Application on an Amazon Linux 2023 EC2 Instance with a custom security group allowing HTTP connections on port 80, 8080, and SSH connection on port 22.
  Roman Numerals Converter Application is downloaded from a Github repository, then installed on Flask.
Parameters:
  MyKeyPair:
    Description: Choose your keypair:
    Type: AWS::EC2::KeyPair::KeyName

  MyInstanceType:
    Description: Choose your instance type:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t3.micro
      - t2.nano

  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64'

Resources:
  WebServerSecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SSH (22), HTTP (80), and custom TCP (8080) ports # Required
      GroupName: hatice-roman-sec-grp
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0

  WebServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: !Ref MyInstanceType
      KeyName: !Ref MyKeyPair
      SecurityGroupIds:
        - !Ref WebServerSecGrp
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData: !Base64 | 
        #!/bin/bash
        dnf update -y
        dnf install python3 -y
        dnf install python3-pip -y
        pip3 install flask
        dnf install git -y
        cd /home/ec2-user
        FOLDER="https://raw.githubusercontent.com/R1143Hatice/001-romen-numarels-converter/main"
        mkdir templates
        wget -P templates ${FOLDER}/templates/index.html
        wget -P templates ${FOLDER}/templates/result.html
        wget ${FOLDER}/roman-numerals-converter-app.py
        python3 roman-numerals-converter-app.py

Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${PIA}:8080
      - PIA: !GetAtt WebServerHost.PublicDnsName
    Description: Roman Numerals Converter Application URL
